--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ word-spacing:-5px;
 <h1>Using word-spacing</h1>
 <p>This is para with normal word spacing</p>
 <p class="one">This is a para with larger word spacing</p>
-<p class="two">This is a para with smaller word spacing</p>
+<p class="two">This is a para with smaller word vidya spacing</p>
 </body>
 </html>
 
